Fix table on mobile

--- a/src/components/table/GuestTableRow.module.css
+++ b/src/components/table/GuestTableRow.module.css
@@ -20,10 +20,3 @@
     cursor: pointer;
     border-radius: 5px;
 }
-
-.songWishesData {
-    max-width: 150px;
-    text-overflow: ellipsis;
-    overflow: hidden;
-    white-space: nowrap;
-}
